issues on mobile

--- a/sites/all/themes/heardmentalitylight/stylesheets/media.css
+++ b/sites/all/themes/heardmentalitylight/stylesheets/media.css
@@ -302,6 +302,14 @@
     .chzn-container-multi .chzn-choices .search-choice {
         max-width: 107px;
     }
+
+    .four.columns.margin-top {
+        margin-top: 59px;
+    }
+
+    #block-user_profile-user-profile-right {
+        margin-top: 0;
+    }
 }
 
 /* iPad Portrait Only 
